--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,6 +57,10 @@ const { title } = Astro.props;
         @apply font-light text-base;
       }
 
+      p {
+        @apply font-light text-base;
+      }
+
       .fine-print {
         @apply font-light text-xs uppercase;
       }
