--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -1,39 +1,38 @@
 ---
-import { getPost } from "../utils/sanity";
+import { getSection } from "../utils/sanity";
+import { PortableText } from "astro-portabletext";
 
-const section2Left = await getPost("section-2-left");
+const section2Left = await getSection("section-2-left");
+const section2RightNW = await getSection("section-2-right-nw");
+const section2RightNE = await getSection("section-2-right-ne");
+const section2RightSW = await getSection("section-2-right-sw");
+const section2RightSE = await getSection("section-2-right-se");
 ---
 
 <section class="">
   <div class="container section-spacing">
     <div class="md:w-5/12 flex flex-col gap-6">
-      <quote class="font-light">{section2Left?.body}</quote>
-      <cite class="text-sm font-light">{section2Left?.subheading}</cite>
+      <quote class="font-light">
+        {section2Left?.quote}
+      </quote>
+      <cite class="text-sm font-light">{section2Left?.cite}</cite>
     </div>
     <div class="md:w-7/12 grid grid-cols-2 gap-8">
       <div>
-        <h3 class="heading text-lg">One</h3>
-        <p class="copy">
-          Sed ut perspiciatis unde omnis iste nat eror acus antium que
-        </p>
+        <h3 class="heading text-lg">{section2RightNW?.heading}</h3>
+        <PortableText value={section2RightNW?.body as any} />
       </div>
       <div>
-        <h3 class="heading text-lg">One</h3>
-        <p class="copy">
-          Sed ut perspiciatis unde omnis iste nat eror acus antium que
-        </p>
+        <h3 class="heading text-lg">{section2RightNE?.heading}</h3>
+        <PortableText value={section2RightNE?.body as any} />
       </div>
       <div>
-        <h3 class="heading text-lg">One</h3>
-        <p class="copy">
-          Sed ut perspiciatis unde omnis iste nat eror acus antium que
-        </p>
+        <h3 class="heading text-lg">{section2RightSW?.heading}</h3>
+        <PortableText value={section2RightSW?.body as any} />
       </div>
       <div>
-        <h3 class="heading text-lg">One</h3>
-        <p class="copy">
-          Sed ut perspiciatis unde omnis iste nat eror acus antium que
-        </p>
+        <h3 class="heading text-lg">{section2RightSE?.heading}</h3>
+        <PortableText value={section2RightSE?.body as any} />
       </div>
     </div>
   </div>
